# AI-model

./: .gitignore  README.md  pyproject.toml
cats-dogs-model/: README_PY.md  README_TFJS.md  convert_tfjs.py  convert_to_tfjs.py  summary.md
cats-dogs-model/web_demo/: index.html  main.js
cats-dogs-model/web_demo/tfjs_model/: model.json  weights_manifest.json
src/: convert_to_tfjs.py  predict.py  retrain.py  train.py
src/web_demo/: app.js  style.css
