[project]
name = "cats-dogs-model"
version = "0.1.0"
description = "Train and use an AI model for cats vs dogs classification"
requires-python = ">=3.10,<3.13"
dependencies = [
    "tensorflow>=2.15",
    "tensorflow-datasets>=4.9",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "importlib-resources>=6.0",
]
